--- a/index.css
+++ b/index.css
@@ -93,7 +93,8 @@ body > img {
   font-weight: 600;
   letter-spacing: 2px;
 }
-#middle {
+#middle,
+#main {
   margin: auto;
   margin-top: 70px;
   width: 90%;
@@ -101,18 +102,21 @@ body > img {
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-around;
 }
-.box {
+.box,
+.submain {
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
   align-items: center;
 }
-.box > img {
-  width: 20%;
+.box > img,
+.submain > img {
+  width: 30%;
   margin-bottom: 15px;
 }
-.box > h2 {
+.box > h2,
+.submain > h4 {
   position: static;
   display: block;
   margin-bottom: 14px;
@@ -123,7 +127,8 @@ body > img {
   line-height: 120%;
   font-weight: 900;
 }
-.box > p {
+.box > p,
+.submain > p {
   overflow: visible;
   max-width: 80%;
   color: #6f8093;
@@ -200,6 +205,38 @@ body > img {
   color: #293240;
   margin-top: 50px;
 }
+#benefits {
+  text-align: center;
+  margin: auto;
+  margin-top: 80px;
+  width: 100%;
+}
+
+#benefits h3 {
+  color: rgb(111, 128, 147);
+  margin-bottom: 10px;
+  font-family: "IBM Plex Sans", sans-serif;
+  color: #6f8093;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+#benefits > p {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  font-family: "IBM Plex Sans";
+  color: #293240;
+  font-size: 50px;
+}
+#benefits h2 {
+  display: block;
+  color: #6f8093;
+  font-size: 28px;
+  font-weight: 100;
+}
+
 /* Medium screens and small screen */
 @media all and (min-width: 100px) and (max-width: 800px) {
   #middle {
@@ -218,4 +255,7 @@ body > img {
   #header {
     height: 1000px;
   }
+}
+.submain {
+  margin-bottom: 100px;
 }
