--- a/Style/servicespage.css
+++ b/Style/servicespage.css
@@ -138,6 +138,10 @@ a{
     background-color: transparent;
     border: 3px solid;
 }
+.button_outline:hover{
+    border-color: #7756a8;
+    color: #7756a8;
+}
 
 .coding_grid.reverse{
     display: grid;
@@ -146,7 +150,49 @@ a{
 
 }
 
-#full_service_coding{
+#full_service_coding , .benefit_section{
     background-color: #f3f5fb;
     color: #6f8093;
+}
+
+/* benifit section */
+
+.container_benefit{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
+.large_heading.benifit_large{
+    text-align: center;
+}
+
+.benefit_grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: auto;
+    /* gap: 10px; */
+}
+
+.benefit_grid > div{
+    padding: 60px 40px 10px;
+}
+
+.h6_small{
+    font-family: Barlow,sans-serif;
+    color: #293240;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 14px 0;
+}
+
+.text_large{
+    font-family: 'IBM Plex Sans',sans-serif;
+    color: #6f8093;
+    font-size: 17px;
+    line-height: 28px;
+}
+
+#benefit_btn{
+    margin-top: 45px;
 }
