--- a/Style/contact.css
+++ b/Style/contact.css
@@ -138,6 +138,66 @@ form > input:nth-last-child(1) {
   height: 40px;
   margin-top: 30px;
 }
+#last {
+  background-color: #f3f5fb;
+  width: 100%;
+  margin: auto;
+  margin-top: 80px;
+  padding-top: 100px;
+  display: grid;
+  padding-bottom: 100px;
+}
+#last > h1 {
+  color: #293240;
+  font-size: 50px;
+  line-height: 125%;
+  font-weight: 300;
+  letter-spacing: 0.01em;
+  margin-left: 70px;
+}
+#last > p {
+  font-size: 20px;
+  margin-bottom: 60px;
+  margin-left: 70px;
+}
+#last > p > span {
+  color: #9a76d0;
+}
+#insidediv {
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-left: 90px;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+}
+
+.box > img {
+  width: 25%;
+  margin-bottom: 15px;
+}
+.box > h1 {
+  display: block;
+  margin-bottom: 14px;
+  clear: none;
+  font-family: Barlow, sans-serif;
+  color: #293240;
+  font-size: 24px;
+  line-height: 120%;
+  font-weight: 900;
+}
+.box > p {
+  max-width: 80%;
+  color: #6f8093;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: left;
+  font-weight: normal;
+  width: 60%;
+}
 /* Medium screens and small screen */
 @media all and (min-width: 100px) and (max-width: 800px) {
   #bigbox {
