--- a/Style/servicespage.css
+++ b/Style/servicespage.css
@@ -1,198 +1,240 @@
-a{
-    text-decoration: none;
-    color: #9a76d0;
-}
-.section{
-    position: relative;
-    padding-top: 96px;
-    padding-bottom: 96px;
-    background-color: #fff;
-}
-.header_container{
-    position: relative;
-    background-image: url('	https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8115255836db2cd3bfd6b2_background.jpg');
-    background-position: 0 0;
-    background-size: cover;
-    background-repeat: repeat;
-    padding: 96px 0;
-}
-.section_title{
-    width: 80%;
-    margin:auto;
-    text-align: center;
-}
-.heading{
-    width: 100%;
-    padding-top: 20px;
-    font-family: 'IBM Plex Serif',sans-serif;
-    color: #fff;
-    font-size: 68px;
-    font-weight: 500;
-    text-align: center;
-    letter-spacing: 1px;
+* {
+  margin-left: 0;
+  margin-right: 0;
 }
 
-.heading_subtitle{
-    color: #fff;
-    font-size: 30px;
-    line-height: 37px;
-    font-weight: 300;
-    font-family: Barlow,sans-serif;
+a {
+  text-decoration: none;
+  color: #9a76d0;
+}
+.section {
+  position: relative;
+  padding-top: 96px;
+  padding-bottom: 96px;
+  background-color: #fff;
+}
+.header_container {
+  position: relative;
+  background-image: url("	https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8115255836db2cd3bfd6b2_background.jpg");
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: repeat;
+  padding: 96px 0;
+}
+.section_title {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+.heading {
+  width: 100%;
+  padding-top: 20px;
+  font-family: "IBM Plex Serif", sans-serif;
+  color: #fff;
+  font-size: 68px;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 1px;
 }
 
-.button{
-    margin: 10px 20px;
-    padding: 14px 28px;
-    border-radius: 28px;
-    background-color: #9a76d0;
-    font-size: 12px;
-    line-height: 22px;
-    text-transform: uppercase;
-    text-decoration: none;
+.heading_subtitle {
+  color: #fff;
+  font-size: 30px;
+  line-height: 37px;
+  font-weight: 300;
+  font-family: Barlow, sans-serif;
 }
 
-.heading_button{
-    display: inline-block;
-    margin-top: 50px;
-    background-color: #fff;
-    color: #9a76d0;
-    font-weight: 700;
-    padding: 14px 60px;
+.button {
+  margin: 10px 20px;
+  padding: 14px 28px;
+  border-radius: 28px;
+  background-color: #9a76d0;
+  font-size: 12px;
+  line-height: 22px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
-.highlight{
-    background-color: #f3f5fb;
-    margin: 20px;
+.heading_button {
+  display: inline-block;
+  margin-top: 50px;
+  background-color: #fff;
+  color: #9a76d0;
+  font-weight: 700;
+  padding: 14px 60px;
 }
 
-.subheader_highlight{
-    width: 70%;
-    margin: auto;
-    text-align: center;
-    padding: 30px 0;
-    font-size: 28px;
-    color: #6f8093;
+.highlight {
+  background-color: #f3f5fb;
+  margin: 20px;
 }
 
-.coding_grid{
-    display: grid;
-    grid-template-columns: 55% 37%;
-    grid-template-rows: auto;
-    gap: 86px;
-    width: 80%;
-    margin: auto;
+.subheader_highlight {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+  padding: 30px 0;
+  font-size: 28px;
+  color: #6f8093;
 }
 
-.coding_grid img{
-    width: 100%;
+.coding_grid {
+  display: grid;
+  grid-template-columns: 55% 37%;
+  grid-template-rows: auto;
+  gap: 86px;
+  width: 80%;
+  margin: auto;
 }
 
-.label_header{
-    margin-bottom: 10px;
-    font-family: 'IBM Plex Sans',sans-serif;
-    color: #6f8093;
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 600;
-    margin-top: 0;
+.coding_grid img {
+  width: 100%;
 }
 
-.large_heading{
-    margin-bottom: 10px;
-    font-family: 'IBM Plex Sans',sans-serif;
-    color: #293240;
-    font-size: 40px;
-    font-weight: 500;
-    text-align: left;
-    letter-spacing: .01em;
-    margin-top: 10px;
+.label_header {
+  margin-bottom: 10px;
+  font-family: "IBM Plex Sans", sans-serif;
+  color: #6f8093;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 600;
+  margin-top: 0;
 }
 
-.subheader{
-    display: block;
-    margin-bottom: 20px;
-    font-family: Barlow,sans-serif;
-    color: #6f8093;
-    font-size: 28px;
-    line-height: 125%;
-    font-weight: 400;
-    margin-top: 8px;
+.large_heading {
+  margin-bottom: 10px;
+  font-family: "IBM Plex Sans", sans-serif;
+  color: #293240;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: left;
+  letter-spacing: 0.01em;
+  margin-top: 10px;
 }
 
-.para_text{
-    width: 85%;
-    line-height: 24px;
-    font-weight: 400;
-    text-align: left;
-    color: #293240;
-    font-size: 16px;
+.subheader {
+  display: block;
+  margin-bottom: 20px;
+  font-family: Barlow, sans-serif;
+  color: #6f8093;
+  font-size: 28px;
+  line-height: 125%;
+  font-weight: 400;
+  margin-top: 8px;
 }
 
-.button_outline{
-    display: inline-block;
-    margin-top: 25px;
-    justify-content: center;
-    border-color: #9a76d0;
-    color: #9a76d0;
-    font-weight: 700;
-    background-color: transparent;
-    border: 3px solid;
-}
-.button_outline:hover{
-    border-color: #7756a8;
-    color: #7756a8;
+.para_text {
+  width: 85%;
+  line-height: 24px;
+  font-weight: 400;
+  text-align: left;
+  color: #293240;
+  font-size: 16px;
 }
 
-.coding_grid.reverse{
-    display: grid;
-    grid-template-columns: 37% 55%;
-    grid-template-rows: auto;
-
+.button_outline {
+  display: inline-block;
+  margin-top: 25px;
+  justify-content: center;
+  border-color: #9a76d0;
+  color: #9a76d0;
+  font-weight: 700;
+  background-color: transparent;
+  border: 3px solid;
+}
+.button_outline:hover {
+  border-color: #7756a8;
+  color: #7756a8;
 }
 
-#full_service_coding , .benefit_section{
-    background-color: #f3f5fb;
-    color: #6f8093;
+.coding_grid.reverse {
+  display: grid;
+  grid-template-columns: 37% 55%;
+  grid-template-rows: auto;
+}
+
+#full_service_coding,
+.benefit_section {
+  background-color: #f3f5fb;
+  color: #6f8093;
 }
 
 /* benifit section */
 
-.container_benefit{
-    width: 80%;
-    margin: auto;
-    text-align: center;
+.container_benefit {
+  width: 80%;
+  margin: auto;
+  text-align: center;
 }
 
-.large_heading.benifit_large{
-    text-align: center;
+.large_heading.benifit_large {
+  text-align: center;
 }
 
-.benefit_grid{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: auto;
-    /* gap: 10px; */
+.benefit_grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  /* gap: 10px; */
 }
 
-.benefit_grid > div{
-    padding: 60px 40px 10px;
+.benefit_grid > div {
+  padding: 60px 40px 10px;
 }
 
-.h6_small{
-    font-family: Barlow,sans-serif;
-    color: #293240;
-    font-size: 24px;
-    font-weight: 500;
-    margin: 14px 0;
+.h6_small {
+  font-family: Barlow, sans-serif;
+  color: #293240;
+  font-size: 24px;
+  font-weight: 500;
+  margin: 14px 0;
 }
 
-.text_large{
-    font-family: 'IBM Plex Sans',sans-serif;
-    color: #6f8093;
-    font-size: 17px;
-    line-height: 28px;
+.text_large {
+  font-family: "IBM Plex Sans", sans-serif;
+  color: #6f8093;
+  font-size: 17px;
+  line-height: 28px;
 }
 
-#benefit_btn{
-    margin-top: 45px;
+#benefit_btn {
+  margin-top: 45px;
+}
+
+/*-------- Media Query --------*/
+
+@media (max-width: 768px) {
+  .heading {
+    font-size: 48px;
+  }
+  .heading_subtitle {
+    font-size: 25px;
+  }
+  .header_container {
+    padding: 46px 0;
+  }
+  .coding_grid,
+  .coding_grid.reverse {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .benefit_grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 375px) {
+  .benefit_grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .button {
+    padding: 10px 28px;
+  }
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
