--- a/Style/team.css
+++ b/Style/team.css
@@ -77,7 +77,7 @@ div {
     border: 0 solid #fff;
     font-family: 'IBM Plex Serif',sans-serif;
     color: #fff;
-    font-size: 68px;
+    font-size: 72.5px;
     line-height: 120%;
     font-weight: 500;
     text-align: center;
@@ -523,11 +523,8 @@ h6 {
         grid-template-rows: auto;
         color: #6f8093;
     }
-    img{
-       width: 70%;
-      height: 150px;
-      margin-top: 30px;
-      margin-left: -10px;   
+    .grid-image{
+       display:block;  
      }
  }
 
