--- a/Style/servicespage.css
+++ b/Style/servicespage.css
@@ -19,7 +19,7 @@ a {
   background-position: 0 0;
   background-size: cover;
   background-repeat: repeat;
-  padding: 96px 0;
+  padding: 60px 0;
 }
 .section_title {
   width: 80%;
@@ -28,7 +28,7 @@ a {
 }
 .heading {
   width: 100%;
-  padding-top: 20px;
+  /* padding-top: 20px; */
   font-family: "IBM Plex Serif", sans-serif;
   color: #fff;
   font-size: 68px;
