--- a/Style/team.css
+++ b/Style/team.css
@@ -195,12 +195,7 @@ a {
 .grid-image {
     width: 140px;
 }
-img {
-    border: 0;
-    vertical-align: middle;
-    display: inline-block;
-    max-width: 100%;
-}
+
 
 /* //wf-section */
 .highlight {
@@ -283,8 +278,9 @@ img {
     padding-right: 24px;
     padding-left: 24px;
     text-align: center;
-    -o-object-fit: none;
+   
     object-fit: none;
+    border: 2px solid red;
 }
 
 .section-title {
@@ -523,14 +519,25 @@ h6 {
         grid-template-rows: auto;
         color: #6f8093;
     }
-    .grid-image{
-       display:block;  
+    img{
+       width: 70%;
+      margin-top: 30px;
+      margin-left: -10px;   
+     }
+     .descriptor{
+        line-height:2em ;
      }
  }
 
  /* medium screen */
 
- @media all and (min-width: 601px) and (max-width: 800px) {
+
+    .case-study-logo img {
+        width: 100%;
+
+    }
+
+ @media all and (min-width: 601px) and (max-width: 900px) {
     
     body{ 
         font-size: 12px;
@@ -556,7 +563,6 @@ h6 {
     img{
         
         width: 100%;
-       height: 300px;
        margin-top: 30px;
      }
     .grid-thirds {
