--- a/Style/policy.css
+++ b/Style/policy.css
@@ -3,6 +3,10 @@
   margin-right: 0px;
   padding: 0px;
 }
+#nav_container {
+  position: fixed;
+  top: 0px;
+}
 #header {
   width: 100%;
   margin: auto;
