--- a/Style/qoute.css
+++ b/Style/qoute.css
@@ -37,7 +37,7 @@
 }
 #banner-desc p {
   margin: auto;
-  margin: 36px 230px 0px;
+  margin: 36px 220px 0px;
   font-size: 30px;
   line-height: 34px;
   font-family: sans-serif;
@@ -84,7 +84,16 @@
 .star {
   color: red;
 }
+#download-app-img{
+  padding-left:  40px;
+  padding-right: 10px;
+  margin-top: 36px;
+  margin-bottom: 0%;
+}
 
+#download-app-img img{
+  margin-bottom: 0%;
+}
 .first-name {
   width: 50%;
   float: left;
