--- a/Style/insight.css
+++ b/Style/insight.css
@@ -103,7 +103,7 @@
   padding: 23px 23px;
   display: flex;
   justify-content: space-evenly;
-  overflow: auto;
+
 }
 
 #bottom-button {
@@ -201,6 +201,19 @@
   top: 20%;
   border: 3px solid black;
   background-color: white;
+}
+
+.row-fluid {
+  color: #697b8f;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 400;
+  box-sizing: border-box;
+  width: 100%;
+  -webkit-box-align: center;
+  align-items: center;
+  display: flex;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
@@ -487,19 +500,17 @@ select {
     right: 1rem;
   }
 }
-@media all and (min-width:768px) and (max-width:1024px){
+@media all and (min-width: 768px) and (max-width: 1024px) {
   /* medium */
 
-  .sub-mid-header{
+  .sub-mid-header {
     display: block;
   }
-
 
   .post-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
-
 
   mid-header {
     width: 100%;
@@ -509,9 +520,7 @@ select {
     background-color: rgb(242, 245, 250);
   }
   .mid-header > div {
-   
     position: static;
-  
   }
 
   .sub-mid-header {
@@ -526,14 +535,18 @@ select {
   #header {
     width: 100%;
     margin: 0px;
-    margin-top: 60px;
-    padding-top: 60px;
+    margin-top: 0px;
+    padding-top: 0px;
     background-image: url(https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8115255836db2cd3bfd6b2_background.jpg);
     overflow-x: auto;
   }
-  
+
+  #header-design{
+    display: none;
+  }
+
 }
-@media all and (min-width:320px) and (max-width:767px){
+@media all and (min-width: 320px) and (max-width: 767px) {
   /* small */
   .post-container {
     display: grid;
@@ -541,29 +554,76 @@ select {
   }
 
   .mid-header > div {
-   
     position: static;
-  
   }
 
   .sub-mid-header {
     display: block;
+     width:auto;
   }
   .sub-mid-header > div {
     width: 100%;
     height: 100%;
     /* border:3px solid red; */
-
   }
   #header {
     width: 100%;
     margin: 0px;
-    margin-top: 60px;
-    padding-top: 60px;
+    margin-top: 0px;
+
+    padding-top: 0px;
     background-image: url(https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8115255836db2cd3bfd6b2_background.jpg);
     overflow-x: auto;
   }
-  
+
+  #title > h1 {
+    font-size: 55px;
   }
 
+  #title > p {
+    width: 100%;
+    font-size: 25px;
+  }
 
+  #header-design {
+    display: none;
+  }
+
+  .container1 {
+    position: relative;
+  }
+
+  .mid-header > div {
+    position: inherit;
+    width:100%;
+  }
+
+  .mid-header {
+    height: auto;
+  }
+
+  .sub-mid-header > div {
+    width: 80%;
+    margin: auto;
+  }
+
+  sub-mid-header > div > div {
+    padding: 10px;
+  }
+
+  .post-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  #header-design{
+    display: none;
+  }
+  .middle-bar
+  {
+    width:100%;
+    gap:7px;
+  }
+  #bottom-update{
+    display: block;
+
+  }
+}
